CMS concurrentMarkSweepGeneration contains lots of unnecessary allocation failure handling

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b64

        CMS' concurrentMarkSweepGeneration.cpp contains a lot of cases where heap memory is allocated (e.g .via NEW_C_HEAP_ARRAY), followed by code that tries to handle failed allocation.

        However, these allocation methods all exit the VM on memory allocation failure, making this code unnecessary.

        Remove this unnecessary memory allocation failure handling code.

              Assignee:
              David Lindholm (Inactive)
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: