8016276: CMS concurrentMarkSweepGeneration contains lots of unnecessary allocation failure handling

Reviewed-by: stefank, pliden